removed odd h3 sytling in whiteoak, fixed content overflow issue in neuse

--- a/drupal/sites/all/themes/watershed/wn_neuse/css/neuse.css
+++ b/drupal/sites/all/themes/watershed/wn_neuse/css/neuse.css
@@ -11,6 +11,10 @@ body {
   margin-top: 40px;
 }
 
+#sidebar-second .block .block-inner, .node-inner {
+  overflow: hidden;
+}
+
 h1.title {
   font-weight: bold;
   font-size: 1.6em;
